randepisode/static/css/style.css
i {
    font-size: 22px;
}

body {
    background-color: #1e242b;
    color: #EEEFF1;
}

.navbar {
    background-color: #14181c;
    color: #BDD4E7;
}

.searchbar {
    height: 2.5rem;
    font-size: 1.2rem;
    line-height: 1.6;
}

.ac-results {
    z-index: 100;
    max-height: 250px;
}

.deselect {
    top: 0px;
    right: 5px;
}

.lighter-bg {
    background-color: #303c47;
}

.search-area {
    max-height: 40px;
}

.poster {
    width: 150px;
    height: 225px;
}

